--- a/shared/css/shared.css
+++ b/shared/css/shared.css
@@ -61,7 +61,7 @@ li {
     margin: 0;
     position: fixed;
     width: 100%;
-    height: 3.75rem;
+    height: 4rem;
     background-color: rgb(67, 67, 71);
     color: rgb(20, 20, 20);
 }
@@ -70,11 +70,12 @@ li {
     position: absolute;
     height: 100%;
     width: 100%;
+    max-width: 60rem;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin: 0;
+    margin: 0 auto;
 }
 
 #nav__title {
@@ -90,11 +91,12 @@ li {
     display: inline;
     font-size: 1.3rem;
     line-height: 1.3rem;
-    padding: 0.55rem 0.9rem;
+    padding: 0.9rem 0.6rem;
     color: #0a020a;
     background-color: #fbe16a;
     border-radius: 5px;
-    border: 2px solid rgba(250, 250, 250, 0.5);
+    /* border: 2px solid rgba(250, 250, 250, 0.5); */
+    border: none;
     text-shadow: 1px 1px 0px rgba(255, 203, 255, 0.507);
     font-family: 'Lato', sans-serif;
     outline: none;    
@@ -128,9 +130,7 @@ li {
 
 .nav__items.show {
     visibility: visible;
-
     transform: translate(0rem);
-
 }
 
 
